--- a/rdphoto/index.html
+++ b/rdphoto/index.html
@@ -1,1 +1,453 @@
+﻿<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"JVAYUQ03pfwPj0si",ck:"JVAYUQ03pfwPj0si"})</script>
 
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>Home</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href='http://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<!-- jQuery -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<!-- Add fancyBox main JS and CSS files -->
+<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+<link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
+		<script>
+			$(document).ready(function() {
+				$('.popup-with-zoom-anim').magnificPopup({
+					type: 'inline',
+					fixedContentPos: false,
+					fixedBgPos: true,
+					overflowY: 'auto',
+					closeBtnInside: true,
+					preloader: false,
+					midClick: true,
+					removalDelay: 300,
+					mainClass: 'my-mfp-zoom-in'
+			});
+		});
+		</script>
+</head>
+<body>
+  <div class="header">	
+      <div class="wrap"> 
+	         <div class="logo">
+				<a href="index.html"><img src="images/logo.png" alt=""/></a>
+			 </div>
+			 <div class="cssmenu">
+				<ul>
+					<li><a href="entries.html">Call for entries</a></li>     
+                                                                                <li><a href="artists.html">Artists</a></li> 
+                                                                                <li><a href="exhibitions.html">Exhibitions</a></li>
+                                                                                <li><a href="printservices.html">Print services</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+		     </div>
+		    <div class="clear"></div>
+	   </div>
+   </div>
+   <div class="index-banner">
+       	 <div class="wmuSlider example1">
+			   <div class="wmuSliderWrapper">
+				   <article style="position: absolute; width: 100%; opacity: 0;"> 
+				   	<div class="banner-wrap">
+					   	<div class="slider-left">
+							<h3>Join Us:</h3>
+							<h4>Photo Magic.</h4>
+							<p class="top">Our mission: </p>
+								<p class="middle">Illuminate the power of photography.</p>
+								<p class="bottom">Snap, Share, Shine!</p>
+							<button class="btn btn-8 btn-8b"><a href="entries.html">Read More</a></button>
+						   <!-- start magnific-->
+								<div id="small-dialog" class="mfp-hide">
+					                           	    <div class="plans_table">
+  			 	
+								  			 	<table width="100%" cellspacing="0" class="compare_plan">
+												<thead>
+								   					<tr>
+								        				<th class="plans-list"><h3>Plan Features</h3></th>
+								        				<th class="plans-list"><h3>Basic</h3><h4>$5<small>/month</small></h4></th>
+								        				<th class="plans-list"><h3>Economy</h3><h4>$9<small>/month</small></h4></th>
+								    				</tr>
+												</thead>
+													<tfoot>
+									    			<tr>
+												        <td> </td>
+								        				<td class="order_now"><a href="#account" class="scroll"><button>Order Now</button></a></td>
+								        				<td class="order_now"><a href="#account" class="scroll"><button>Order Now</button></a></td>
+													</tr>
+													</tfoot>				
+								   				<tbody>
+								   					<tr>
+									        			<td class="plan_list_title">Web Space</td>
+												        <td class="price_body">Unlimited</td>
+												        <td class="price_body">Unlimited</td>
+									    			</tr>
+								    				<tr>
+								        				<td class="plan_list_title">Bandwidth</td>
+														<td class="price_body">Unlimited</td>
+										        		<td class="price_body">Unlimited</td>
+								    				</tr>
+								    				<tr>
+								        				<td class="plan_list_title">25 GB Storage</td>
+											    	    <td class="price_body"><img src="images/icon-remove.png" alt="img"></td>
+											        	<td class="price_body">Unlimited</td>
+													</tr>
+								    				<tr>
+											    	    <td class="plan_list_title">iPhone App</td>
+											        	<td class="price_body"><img src="images/icon-remove.png" alt="img"></td>
+												        <td class="price_body">Unlimited</td>
+								    				</tr>
+								    				<tr>
+								        				<td class="plan_list_title">Enhanced Security</td>
+									        			<td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+												        <td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+								    				</tr>
+									    			<tr>
+								    	    			<td class="plan_list_title">E-mail</td>
+								        				<td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+												        <td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+									    			</tr>
+								    				<tr>
+								        				<td class="plan_list_title">Wordpress Support</td>
+												        <td class="price_body"><img src="images/icon-remove.png" alt="img"></td>
+											    	    <td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+								    				</tr>
+								    				<tr>
+								        				<td class="plan_list_title">24/7 Support</td>
+								        				<td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+											        	<td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+								    				</tr>
+								    				<tr>
+								        				<td class="plan_list_title">Backups</td>
+												    	<td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+												        <td class="price_body"><img src="images/tickmark-icon.png" alt="img"></td>
+								    				</tr>
+								    				<tr>
+								        				<td class="plan_list_title">Dedicated IP</td>
+												        <td class="price_body">$2/mo</td>
+												        <td class="price_body">$2/mo</td>
+								    				</tr>
+												</tbody></table>  			 	
+  											 </div>
+												</div>
+									<!-- end magnific-->
+						 </div>
+						 <div class="slider-right">
+						    <img src="images/banner-right1.png" width="750" height="466" /> 
+						 </div>
+						 <div class="clear"></div>
+					 </div>
+					</article>
+				   <article style="position: relative; width: 100%; opacity: 1;"> 
+				   	 <div class="banner-wrap">
+				   	 	 <div class="slider-right">
+						    <img src="images/banner-left1.png" width="750" height="437" /> 
+						 </div>
+					   	<div class="slider-left">
+							<h3>Your Lens, </h3>
+							<h4>Your Story: Join Us.</h4>
+							<p class="top">Open to photographers worldwide, </p>
+								<p class="middle">pro and amateur,</p>
+								<p class="bottom">working in all mediums, styles and schools of thought.</p>
+							<button class="btn btn-8 btn-8b"><a href="entries.html"> Enter </a></button> 
+						 </div>
+						<div class="clear"></div>
+					 </div>
+				   </article>
+				   <article style="position: absolute; width: 100%; opacity: 0;">
+				   	<div class="banner-wrap">
+					   	<div class="slider-left">
+							<h3>2025 R&amp;D&#39;s</h3>
+							<h4>Juried Exhibition</h4>
+							<p class="top"> Deadline: May 30. </p>
+								<p class="middle">Win $300!</p>
+								<p class="bottom">Exhibit in our gallery and website.</p>
+							<button class="btn btn-8 btn-8b"><a href="entries.html"> Now Enter </a></button> 
+						 </div>
+						<div class="slider-right">
+						    <img src="images/banner-right2.png" width="750" height="524" /> 
+						 </div>
+						 <div class="clear"></div>
+					 </div>
+				   </article>
+				   <article style="position: absolute; width: 100%; opacity: 0;">
+				   	<div class="banner-wrap">
+				   		<div class="slider-right">
+						    <img src="images/banner-left2.png" width="750" height="451" /> 
+						 </div>
+					   	<div class="slider-left">
+							<h3>B&W Contest: </h3>
+							<h4>See Winners!</h4>
+							<p class="top">Congrats to our Contest Winners!</p>
+								<p class="middle">Next: Color Contest</p>
+								<p class="bottom">Join & Show Your Colors!</p>
+							<button class="btn btn-8 btn-8b"><a href="artists.html"> More </a></button> 
+						 </div>
+						 <div class="clear"></div>
+					 </div>
+				   </article>
+				   <article style="position: absolute; width: 100%; opacity: 0;"> 
+				   		<div class="banner-wrap">
+					   	<div class="slider-left">
+							<h3>Unveiling Soon: </h3>
+							<h4>Pets Exhibition.</h4>
+							<p class="top">Experience the joy of pet love!</p>
+								<p class="middle">Location: R&D Gallery. </p>
+								<p class="bottom">Opens: July 1.</p>
+							<button class="btn btn-8 btn-8b"><a href="exhibitions.html"> Read more </a></button> 
+						 </div>
+						 <div class="slider-right">
+						    <img src="images/banner-right3.png" /> 
+						 </div>
+						 <div class="clear"></div>
+					 </div>
+			      </article>
+				</div>
+                <a class="wmuSliderPrev">Previous</a><a class="wmuSliderNext">Next</a>
+                <ul class="wmuSliderPagination">
+                	<li><a href="#" class="">0</a></li>
+                	<li><a href="#" class="">1</a></li>
+                	<li><a href="#" class="wmuActive">2</a></li>
+                	<li><a href="#">3</a></li>
+                	<li><a href="#">4</a></li>
+                  </ul>
+        </div>
+            	 <script src="js/jquery.wmuSlider.js"></script> 
+				 <script type="text/javascript" src="js/modernizr.custom.min.js"></script> 
+						<script>
+       						 $('.example1').wmuSlider();         
+   						</script> 	           	      
+   </div>
+				<!---//End-da-slider----->
+  <div class="main">
+	 <div class="content-top">
+		 <div class="wrap">
+			<h3>Gain global exposure through our platform.</h3>
+			<h5>Showcase your photographic talent to the world with us.</h5>
+			<div class="section group">
+				<div class="col_1_of_4 span_1_of_first">
+					<img src="images/pic.jpg" alt=""/>
+					<div class="desc">
+					   <h4>Exhibition in April<br><span>in</span><div class="clear"></div></h4>
+					</div> 
+				</div>
+				<div class="col_1_of_4 span_1_of_4">
+					<div class="grid1">
+						<img src="images/icon1.png" alt=""/>
+						<h4>Exhibition in may</h4>
+					</div>
+					<div class="desc">
+					   <p>Opening Date：May 1~ June 1</p>
+					</div> 
+				</div>
+				<div class="col_1_of_4 span_1_of_4">
+					<div class="grid1">
+						<img src="images/icon2.png" alt=""/>
+						<h4>Exhibition in June</h4>
+					</div>
+					<div class="desc">
+					   <p>Opening Date：June 1~ July 1</p>
+					</div> 
+				</div>
+				<div class="col_1_of_4 span_1_of_4">
+					<div class="grid1">
+						<img src="images/icon3.png" alt=""/>
+						<h4>Exhibition in July</h4>
+					</div>
+					<div class="desc">
+					   <p>Opening Date：July 1~ Aug. 1</p>
+					</div> 
+				</div>
+				<div class="clear"></div>
+			</div>
+		</div>
+	</div>	
+	<div class="content-middle">
+		<h2><span>Join US</span></h2>
+		<p>&nbsp;</p>
+      <div id="container">
+        <div id="main1">
+       <ul id="tiles">
+        <!-- These are our grid blocks -->
+        <li>
+          <a href="images/t-pic1.jpg" rel="lightbox" class="cboxElement">
+            &nbsp;</a></li>
+        <li>
+          <a href="images/pic10.jpg" rel="lightbox" class="cboxElement">
+            &nbsp;</a></li>
+     </ul>
+   </div> 
+  </div>
+   <link rel="stylesheet" href="css/colorbox.css">
+  <!-- Include the imagesLoaded plug-in -->
+  <script src="js/jquery.imagesloaded.js"></script>
+  <!-- include colorbox -->
+  <script src="js/jquery.colorbox-min.js"></script>
+  <!-- Include the plug-in -->
+  <script src="js/jquery.wookmark.js"></script>
+  <!-- Once the page is loaded, initalize the plug-in. -->
+  <script type="text/javascript">
+    (function ($){
+      $('#tiles').imagesLoaded(function() {
+        // Prepare layout options.
+        var options = {
+          autoResize: true, // This will auto-update the layout when the browser window is resized.
+          container: $('#main1'), // Optional, used for some extra CSS styling
+          offset: 2, // Optional, the distance between grid items
+          itemWidth:200 // Optional, the width of a grid item
+        };
+
+        // Get a reference to your grid items.
+        var handler = $('#tiles li');
+
+        // Call the layout function.
+        handler.wookmark(options);
+
+        // Init lightbox
+        $('a', handler).colorbox({
+          rel: 'lightbox'
+        });
+      });
+    })(jQuery);
+  </script>
+</div>
+   <div class="content-bottom">
+		<h2><span>Join us</span></h2>  
+		<p>&nbsp;</p>
+		<ul id="flexiselDemo3">
+			<li><img src="images/client1.jpg" /></li>
+			<li><img src="images/client2.jpg" /></li>
+			<li><img src="images/client3.jpg" /></li>
+			<li><img src="images/client4.jpg" /></li>
+			<li><img src="images/client5.jpg" /></li>
+			<li><img src="images/client6.jpg" /></li>
+			<li><img src="images/client7.jpg" /></li>
+			<li><img src="images/client8.jpg" /></li>
+		</ul>
+	<script type="text/javascript">
+$(window).load(function() {
+	$("#flexiselDemo1").flexisel();
+	$("#flexiselDemo2").flexisel({
+		enableResponsiveBreakpoints: true,
+    	responsiveBreakpoints: { 
+    		portrait: { 
+    			changePoint:480,
+    			visibleItems: 1
+    		}, 
+    		landscape: { 
+    			changePoint:640,
+    			visibleItems: 2
+    		},
+    		tablet: { 
+    			changePoint:768,
+    			visibleItems: 3
+    		}
+    	}
+    });
+
+	$("#flexiselDemo3").flexisel({
+		visibleItems: 5,
+		animationSpeed: 1000,
+		autoPlay: true,
+		autoPlaySpeed: 3000,    		
+		pauseOnHover: true,
+		enableResponsiveBreakpoints: true,
+    	responsiveBreakpoints: { 
+    		portrait: { 
+    			changePoint:480,
+    			visibleItems: 1
+    		}, 
+    		landscape: { 
+    			changePoint:640,
+    			visibleItems: 2
+    		},
+    		tablet: { 
+    			changePoint:768,
+    			visibleItems: 3
+    		}
+    	}
+    });
+    
+});
+</script>
+<script type="text/javascript" src="js/jquery.flexisel.js"></script>
+</div>
+</div>	
+<div class="footer">
+	<div class="footer-top">
+	   <div class="wrap">
+		   <div class="section group">
+				<div class="col_1_of_3 span_1_of_3">
+					<h3>R&D Photo Arts</h3>
+					<p>Open Hours</p>
+					<p>Tues.-Sat. 10:00AM-4:30PM</p>
+					<p>Or schedule an appointment.</p>
+					<div class="gallery">
+					</div>
+				</div>
+				<div class="col_1_of_3 span_1_of_3">
+					<h3>Join our Newsletter</h3>
+					<div class="footer-list">
+						<p>&nbsp;</p>
+						<p>Join Now</p>
+						<p>&nbsp;</p>
+					</div>
+					 <div class="social-icons">	
+					 	<h4>Social Connecting</h4>
+						    <ul>	
+							  <li class="facebook"><a href="#"><span> </span></a></li>
+					          <li class="google"><a href="#"><span> </span></a></li>
+					          <li class="twitter"><a href="#"><span> </span></a></li>
+					          <li class="linkedin"><a href="#"><span> </span></a></li>	 
+					          <li class="youtube"><a href="#"><span> </span></a></li>	
+					          <li class="bloger"><img src="images/tw.png" alt=""/></li>
+					          <li class="rss"><a href="#"><span> </span></a></li>	
+					          <li class="dribble"><a href="#"><span> </span></a></li>		        	
+					        </ul>
+				     </div>
+			    </div>
+				<div class="col_1_of_3 span_1_of_3" style="margin-bottom: 0%">
+					<h3>Contact info</h3>
+					<div class="footer-list">
+						<ul>
+							<li><img src="images/address.png" alt=""/><p>
+							<span data-slate-fragment=style="white-space: pre;">
+							2707 CRIMSON WAY,POMONA,CA 91767</span></p><div class="clear"></div></li>
+							<li><img src="images/phone.png" alt=""/><p>Phone: </p><div class="clear"></div></li>
+							<li><img src="images/msg.png" alt=""/><p>Email: <span class="yellow">
+							<a href="mailto:rdphotoarts@gamil.com">rdphotoarts@gmail.com</a></span></p><div class="clear"></div></li>
+					   </ul>
+					</div>
+				</div>
+				<div class="clear"></div>
+			</div>
+	  </div>
+	 </div>
+	 <div class="footer-bottom">
+	 	<div class="wrap">
+		 	<div class="copy">
+			    <p class="copy">■ All rights to the photographs remain with the 
+				photographer <br>
+				■ Copyright 2024 R&D Photo Arts All Rights Reserved</p>
+		    </div>
+		 	<div class="footer-nav">
+		 		<ul> 
+					<li><a href="entries.html">Call for entries</a></li> 
+                                                                                <li><a href="artists.html">artists</a></li>
+                                                                                <li><a href="exhibitions.html">Exhibitions</a></li> 
+                                                                                <li><a href="printservices.html">Print services</a></li>
+					<li><a href="about.html">About Us</a></li>  
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+		 	</div>
+		 	<div class="clear"></div>
+	    </div>
+	</div>
+</div>
+
+</body>
+</html>
