--- a/cv.html
+++ b/cv.html
@@ -1,102 +1,55 @@
 ﻿<!DOCTYPE html>
-<style type="text/css">
-.style1 {
-	font-family: "Roboto Condensed";
-}
-.style3 {
-	text-align: center;
-	font-family: "Roboto Condensed";
-}
-.style4 {
-	color: #000000;
-}
-.style5 {
-	font-family: "Roboto Condensed";
-	color: #000000;
-}
-.style7 {
-	color: #333333;
-	font-family: "Arial Narrow";
-	font-size: small;
-}
-.style11 {
-	font-family: "Arial Narrow";
-}
-.style12 {
-	color: #000000;
-	font-size: medium;
-	font-family: 华文中宋;
-}
-.style14 {
-	font-size: medium;
-}
-.style15 {
-	font-size: x-small;
-}
-</style>
-<!--[if lt IE 7]>      
-<html class="no-js lt-ie9 lt-ie8 lt-ie7" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"> <![endif]-->
-<!--[if IE 7]>         
-<html class="no-js lt-ie9 lt-ie8" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"> <![endif]-->
-<!--[if IE 8]>         
-<html class="no-js lt-ie9" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"> <![endif]-->
-<!--[if gt IE 8]><span class="style1"><!--> 
-<html class="no-js" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"> <!--<![endif]-->
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Chengbin Zhang</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content=" " />
-	<meta name="keywords" content=" " />
-	<meta name="author" content="FREEHTML5.CO" />
+<html lang="zh-CN">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Chengbin Zhang - CV</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <style type="text/css">
+        body {
+            /* 使用系统默认的无衬线字体，兼顾美观与速度 */
+            font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+        }
+        .style1 {
+            font-family: inherit;
+            margin-bottom: 5px; /* 缩小标题下方间距 */
+        }
+        .style3 {
+            text-align: center;
+            margin-top: 0; /* 消除图片上方多余间距 */
+        }
+        .style5 {
+            font-weight: bold;
+            color: #000000;
+            margin-top: 20px;
+        }
+        .style7 {
+            color: #333333;
+            font-size: small;
+        }
+        .style11 {
+            font-family: Arial, sans-serif;
+        }
+        .style12 {
+            color: #000000;
+            font-size: medium;
+        }
+        .style14 {
+            font-size: medium;
+        }
+        .style15 {
+            font-size: x-small;
+        }
+        /* 移除原有的 Google 字体引用，改用本地逻辑提速 */
+    </style>
 
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		 
-	Email: 		 
-	Twitter: 		 
-	Facebook: 		
-
-	//////////////////////////////////////////////////////
-	 -->
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
-
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,900' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700" rel="stylesheet">
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<!-- Superfish -->
-	<link rel="stylesheet" href="css/superfish.css">
-	<!-- Flexslider  -->
-	<link rel="stylesheet" href="css/flexslider.css">
-
-	<link rel="stylesheet" href="css/style.css">
-
-
-	<!-- Modernizr JS -->
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/icomoon.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/superfish.css">
+    <link rel="stylesheet" href="css/flexslider.css">
+    <link rel="stylesheet" href="css/style.css">
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
@@ -126,9 +79,7 @@
 
 		<div class="page-content">
 			
-  <h1 class="style1">CV</h1>
-			<p class="style1">&nbsp;</p>
-			
+  <h1 class="style1">CV</h1>			
   <p class="style3"> <img src="images/person_2.jpg" alt="" width="187" height="228"></p>
 			<p class="style5">
 			<strong>Honors and Awards</strong></p>
@@ -343,5 +294,13 @@
 	</body>
 </html>
 
-<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-<script>LA.init({id:"JVAYUQ03pfwPj0si",ck:"JVAYUQ03pfwPj0si"})</script>
+<script async charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>
+        // 只有在联网状态下才初始化计数器
+        if (navigator.onLine) {
+            LA.init({id:"JVAYUQ03pfwPj0si",ck:"JVAYUQ03pfwPj0si"})
+        }
+    </script>
+
+</body>
+</html>
