--- a/cv.html
+++ b/cv.html
@@ -86,7 +86,7 @@
 			
   <ul class="style2">
     <li class="style7">
-	<h4 class="style11"><span lang="EN-US"><strong><span class="style14">202<span lang="zh-cn">6</span></span></strong><span class="style14"><br>
+	<h4 class="style11"><span lang="EN-US"><strong><span class="style14">2026</span></span></strong><span class="style14"><br>
 	</span></span><span class="style14"><span lang="EN-US">•</span> 
 	<span lang="EN-US">Honorable Mention, Atlas of the Present: Collage and 
 	Photography Today, Los Angeles Center of Photography</span></span></h4>
